lots of stuff wow

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-    <div>
-        <h1>Marios Pest Contol</h1>
+    <div id="header">
+        <img src="https://supermariorun.com/assets/img/hero/hero_chara_mario_pc.png" alt="">
+        <h1 id="text">Marios Pest Control</h1>
     </div>
     <div id="baddies">
         <div class="baddie">
@@ -31,9 +32,14 @@
             <h2>11 Coins</h2>
             <input id="cheepcheep" placeholder="Total Caught" type="number">
         </div>
-        <h1>Total Cost =
-            <span id="total"></span>
-        </h1>
+    </div>
+    <h1>Total Cost =
+        <span id="total"></span>
+    </h1>
+    <div id="footer">
+        <div>www.mariopestcontrol.com</div>
+        <div>mario@gmail.com</div>
+        <div>132 Big Ass Caste Ln Italy</div>
     </div>
 
 </body>
