--- a/projects/business-time/index.html
+++ b/projects/business-time/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
@@ -12,7 +13,6 @@
         <div id="navleft">
             <div>Home</div>
             <div>About</div>
-            <div>Contact</div>
         </div>
         <h1>GRAILED</h1>
         <div id="navright">
@@ -21,17 +21,63 @@
         </div>
     </nav>
     <hr>
-
-    <div id="main">
-
-        <img src="http://www.taxihangerlane.uk/images/category_8/First%20class%20Women%20Gosha%20Rubchinskiy%20Layered%20Hoodie%205redlightgrey%20G012T019_4.jpg"
-            alt="">
-        <span id="line-middle"></span>
-        <img src="http://www.pageasy.co.uk/images/images/category_37/J.W.Anderson-striped-polo-sweater-Men-Sweaters-Knitwear-Hoodies-Jumpers-S8Q2Bf_2.jpg"
-            alt="">
+    <div id="options">
+        <ul>
+            <li>Search</li>
+            <li>Tops</li>
+            <li>Bottoms</li>
+            <li>Footwear</li>
+            <li>Accessories</li>
+        </ul>
 
     </div>
     <hr>
+    <div id="banner">
+        <h1 id="bannertext">A marketplace for buying and selling designer Clothing</h1>
+    </div>
+    <div id="main">
+        <img id="main" src="https://i.redd.it/h3sl97377bvz.jpg" alt=" " />
+        <span id="line-middle "></span>
+
+    </div>
+    <hr>
+    <h1>Recent Listings</h1>
+    <div id="itemsDisplay">
+        <div id="item">
+            <p>Gosha Shirt</p>
+            <img src="https://cdn.shopify.com/s/files/1/0624/0605/products/NOTRE-CHICAGO-GOSHA-RUBCHINSKIY-X-ADIDAS-GRAPHIC-TEE-RED-6572_2048x2048.jpg?v=1531840392"
+                alt="">
+            <p>$120</p>
+            <p>Posted 2 hours ago</p>
+        </div>
+        <div id="item">
+            <p>Gosha Shirt</p>
+            <img src="https://cdn.shopify.com/s/files/1/0624/0605/products/NOTRE-CHICAGO-GOSHA-RUBCHINSKIY-X-ADIDAS-GRAPHIC-TEE-RED-6572_2048x2048.jpg?v=1531840392"
+                alt="">
+            <p>$120</p>
+            <p>Posted 2 hours ago</p>
+        </div>
+        <div id="item">
+            <p>Gosha Shirt</p>
+            <img src="https://cdn.shopify.com/s/files/1/0624/0605/products/NOTRE-CHICAGO-GOSHA-RUBCHINSKIY-X-ADIDAS-GRAPHIC-TEE-RED-6572_2048x2048.jpg?v=1531840392"
+                alt="">
+            <p>$120</p>
+            <p>Posted 2 hours ago</p>
+        </div>
+        <div id="item">
+            <p>Gosha Shirt</p>
+            <img src="https://cdn.shopify.com/s/files/1/0624/0605/products/NOTRE-CHICAGO-GOSHA-RUBCHINSKIY-X-ADIDAS-GRAPHIC-TEE-RED-6572_2048x2048.jpg?v=1531840392"
+                alt="">
+            <p>$120</p>
+            <p>Posted 2 hours ago</p>
+        </div>
+    </div>
+    <div id="footer">
+        <p>
+            <a href="">Contact</a>
+        </p>
+        <p>Published 2017</p>
+    </div>
 </body>
 
 </html>
