--- a/projects/business-time/index.html
+++ b/projects/business-time/index.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <hr>
-    <div id="options">
+    <span>
         <ul>
             <li>Search</li>
             <li>Tops</li>
@@ -29,8 +29,7 @@
             <li>Footwear</li>
             <li>Accessories</li>
         </ul>
-
-    </div>
+    </span>
     <hr>
     <div id="banner">
         <h1 id="bannertext">A marketplace for buying and selling designer Clothing</h1>
